Removed unused references and added jquery datatables to project.  Also added a few other nuget packages  such as MoreLinq and Autofac

--- a/SportsTech.Web/Views/Shared/_Layout.cshtml
+++ b/SportsTech.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")    
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/dataTable")
+    @Scripts.Render("~/bundles/bootstrap")    
     @Scripts.Render("~/bundles/core")
     @RenderSection("scripts", required: false)
 </body>
