Added Events area as events will be a big topic so felt it deserved it's own area

--- a/SportsTech.Web/Views/Dashboard/Index.cshtml
+++ b/SportsTech.Web/Views/Dashboard/Index.cshtml
@@ -4,6 +4,6 @@
 
 <h2>Dashboard</h2>
 <div class="event-list-container">
-    @Html.Action("List", "Event")
+    @Html.Action("List", "Event", new { Area = "Events" })
 </div>
 
