Started trying to see what the Bootstrap styles would look like

--- a/SportsTech.Web/Areas/Events/Views/Event/Create.cshtml
+++ b/SportsTech.Web/Areas/Events/Views/Event/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SportsTech.Web.ViewModels.Event.CreateViewModel
+﻿@model SportsTech.Web.Areas.Events.ViewModels.Event.CreateViewModel
 
 @{
     ViewBag.Title = "Create new event";
