--- a/SportsTech.Web/Areas/Events/Views/Event/List.cshtml
+++ b/SportsTech.Web/Areas/Events/Views/Event/List.cshtml
@@ -9,7 +9,7 @@
                 { sName: "Home Game" }
             ],
             dataTableLoadUrl: '@Url.Action("DataTable")',
-            dataTableEditUrl: '@Url.Action("Edit")',            
+            dataTableEditUrl: '@Url.Action("View", "Dashboard")',            
             dataTableShowDelete: true                
         };
 
