--- a/SportsTech.Web/Areas/Events/Views/Event/_EventForm.cshtml
+++ b/SportsTech.Web/Areas/Events/Views/Event/_EventForm.cshtml
@@ -1,9 +1,9 @@
-﻿@model SportsTech.Web.ViewModels.Event.CreateViewModel
+﻿@model SportsTech.Web.Areas.Events.ViewModels.Event.CreateViewModel
 
 <div class="form-group">
     @Html.LabelFor(model => model.Against, new { @class = "control-label col-md-2" })
     <div class="col-md-10">
-        @Html.EditorFor(model => model.Against)
+        @Html.TextBoxFor(model => model.Against, new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.Against)
     </div>
 </div>
@@ -11,15 +11,19 @@
 <div class="form-group">
     @Html.LabelFor(model => model.IsHomeGame, new { @class = "control-label col-md-2" })
     <div class="col-md-10">
-        @Html.EditorFor(model => model.IsHomeGame)
-        @Html.ValidationMessageFor(model => model.IsHomeGame)
+        <div class="checkbox">
+            <label>
+                @Html.CheckBoxFor(model => model.IsHomeGame)
+            </label>
+            @Html.ValidationMessageFor(model => model.IsHomeGame)
+        </div>
     </div>
 </div>
 
 <div class="form-group">
     @Html.LabelFor(model => model.Referee, new { @class = "control-label col-md-2" })
     <div class="col-md-10">
-        @Html.EditorFor(model => model.Referee)
+        @Html.TextBoxFor(model => model.Referee, new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.Referee)
     </div>
 </div>
@@ -27,7 +31,7 @@
 <div class="form-group">
     @Html.LabelFor(model => model.EventDate, new { @class = "control-label col-md-2" })
     <div class="col-md-10">
-        @Html.EditorFor(model => model.EventDate)
+        @Html.TextBoxFor(model => model.EventDate, new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.EventDate)
     </div>
 </div>
