--- a/SportsTech.Web/Areas/Events/Views/Dashboard/View.cshtml
+++ b/SportsTech.Web/Areas/Events/Views/Dashboard/View.cshtml
@@ -5,28 +5,74 @@
 }
 
 <div class="row">
-
     <div class="col-lg-2">
-
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h3 class="panel-title">Available events</h3>
+            </div>
+            <div class="panel-body">
+                @Html.Action("Available", "Activity", new { eventId = Model.Id })
+            </div>
+        </div>
     </div>
 
     <div class="col-lg-8">
 
+        <div class="row">
+            <div class="col-lg-5">
+                <div class="row">
+                    @Html.Partial("Team", Model.Home)
+                </div>
+                <div class="row top-buffer">
+                    @Html.Action("SystemDefined", "Activity", new { eventId = Model.Id })
+                </div>
+            </div>
+            <div class="col-lg-2 text-center">
+                <div class="center-block text-center">
+                    V
+                </div>
+                <div class="center-block text-center">
+                    @Model.ElapsedTime
+                </div>
 
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">Events during the game</h3>
             </div>
-            <div class="panel-body">
-                @Html.Action("List", "Activity", new { eventId = Model.Id })
+            <div class="col-lg-5">
+                <div class="row">
+                    @Html.Partial("Team", Model.Away)
+                </div>
+                <div class="row top-buffer">
+                    @Html.Action("SystemDefined", "Activity", new { eventId = Model.Id })
+                </div>
             </div>
-            <div class="panel-footer"></div>
         </div>
 
+        <div class="row top-buffer">
+            <div class="col-lg-12 center-block text-center">
+                @Html.Action("Stoppages", "Activity", new { eventId = Model.Id })
+            </div>
+        </div>
+
+        <div class="row top-buffer">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Events during the game</h3>
+                </div>
+                <div class="panel-body">
+                    @Html.Action("List", "Activity", new { eventId = Model.Id })
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="col-lg-2">
-
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h3 class="panel-title">Available events</h3>
+            </div>
+            <div class="panel-body">
+                @Html.Action("Available", "Activity", new { eventId = Model.Id })
+            </div>
+        </div>
     </div>
 
 </div>
