--- a/SportsTech.Web/Views/Shared/_SiteHeader.cshtml
+++ b/SportsTech.Web/Views/Shared/_SiteHeader.cshtml
@@ -8,9 +8,9 @@
 </div>
 <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav">
-        <li>@Html.ActionLink("My Dashboard", "Index", "Dashboard")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+        <li>@Html.ActionLink("My Dashboard", "Index", "Dashboard", new { Area = "" }, null)</li>
+        <li>@Html.ActionLink("About", "About", "Home", new { Area = "" }, null)</li>
+        <li>@Html.ActionLink("Contact", "Contact", "Home", new { Area = "" }, null)</li>
     </ul>
     @*@Html.Partial("_LoginPartial")*@
 </div>
