--- a/SportsTech.Web/Views/Shared/_SiteFooter.cshtml
+++ b/SportsTech.Web/Views/Shared/_SiteFooter.cshtml
@@ -1,1 +1,1 @@
-﻿<p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+﻿<p>&copy; @DateTime.Now.Year - SportsTech by <a href="http://andrescottwilson.com">Andre Wilson</a></p>
