--- a/SportsTech.Web/Content/Site.css
+++ b/SportsTech.Web/Content/Site.css
@@ -40,9 +40,10 @@ input[type="checkbox"].input-validation-error {
     display: none;
 }
 
-/* ****************************************************************
-    Twitter bootstrap extensions */
-
+/* ---------------------------------------------------------------------- */
+/*	Twitter bootstrap extensions
+/* ---------------------------------------------------------------------- */
+	
 .col-centered{
     float: none;
     margin: 0 auto;
@@ -51,3 +52,84 @@ input[type="checkbox"].input-validation-error {
 .top-buffer { margin-top:10px; }
 
 /* ***************************************************************** */
+
+/* ---------------------------------------------------------------------- */
+/*	Model overrides (adjustments)
+/* ---------------------------------------------------------------------- */
+
+#dlgDelete {
+    width: 560px;
+}	
+
+#dtable tbody td.action {
+    cursor:pointer;
+}
+
+.modal, .modal-header {
+	background: #305F9C;
+}
+	
+.modal {
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  bottom:auto;
+  overflow-y:auto;
+  z-index: 1050;
+  width: 560px;
+  margin-left: -280px;
+  background-color: #ffffff;
+  border: 1px solid #999;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  *border: 1px solid #999;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+  outline: none;
+  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+     -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  -webkit-background-clip: padding-box;
+     -moz-background-clip: padding-box;
+          background-clip: padding-box;
+}
+.modal-header h3 {
+	font-size: 18px;
+	font-weight: 300;
+	color:#fff;		
+    line-height: 30px;
+    margin: 0;
+}
+	
+.modal-header {
+	-webkit-border-radius: 2px 2px 0px 0px;
+	-moz-border-radius: 2px 2px 0px 0px;
+	border-radius: 2px 2px 0px 0px;
+    padding: 9px 15px;
+}
+
+.modal-footer {
+    background-color: #F5F5F5;
+    border-radius: 0 0 6px 6px;
+    border-top: 1px solid #DDDDDD;
+    box-shadow: 0 1px 0 #FFFFFF inset;
+    margin-bottom: 0;
+    margin-top:0;
+    padding: 14px 15px 15px;
+    text-align: right;
+}
+
+.modal.fade.in {
+	top:30%;
+}
+	
+.modal-body {
+	background-color:#fff;
+    max-height:400px;
+    overflow-y: auto;
+    padding:15px;
+}
+.modal-content {
+	padding: 0;
+	background:#fff;
+}
