Added qTip styling for error messages

--- a/SportsTech.Web/Areas/Events/Views/Event/List.cshtml
+++ b/SportsTech.Web/Areas/Events/Views/Event/List.cshtml
@@ -42,7 +42,7 @@
         });
     </script>
 
-    <script src="~/Scripts/site.dataTable.js"></script>
+    <script src="~/Scripts/page.dataTable.js"></script>
 }
 
 @section dialogs {
