--- a/SportsTech.Web/Views/Shared/_Layout.cshtml
+++ b/SportsTech.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base")
+    @Styles.Render("~/Content/qTip")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -30,6 +31,7 @@
     @Scripts.Render("~/bundles/jqueryval")    
     @Scripts.Render("~/bundles/dataTable")
     @Scripts.Render("~/bundles/bootstrap")    
+    @Scripts.Render("~/bundles/qTip")
     @Scripts.Render("~/bundles/core")
     @RenderSection("scripts", required: false)
     
