Added seed data for db initialisation

--- a/SportsTech.Web/Views/Shared/_SiteHeader.cshtml
+++ b/SportsTech.Web/Views/Shared/_SiteHeader.cshtml
@@ -10,7 +10,7 @@
     <ul class="nav navbar-nav">
         <li>@Html.ActionLink("My Dashboard", "Index", "Dashboard", new { Area = "" }, null)</li>
         <li>@Html.ActionLink("About", "About", "Home", new { Area = "" }, null)</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home", new { Area = "" }, null)</li>
+        <li>@Html.ActionLink("Contact", "Contact", "Home", new { Area = "" }, null)</li>        
     </ul>
-    @*@Html.Partial("_LoginPartial")*@
+    @Html.Partial("_LoginPartial")
 </div>
