--- a/SportsTech.Web/Areas/Clubs/Views/Shared/_SiteHeader.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Shared/_SiteHeader.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="navbar-header">
+﻿
+@model SportsTech.Web.Areas.Clubs.ViewModels.Club.SiteHeaderViewModel
+
+<div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -8,9 +11,18 @@
 </div>
 <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav">
-        <li>@Html.ActionLink("Create club", "Create", "Club", new { Area = "Clubs" }, null)</li>
+        <li>
+            @if (Model.ClubCount <= 1)
+            {
+                @Html.ActionLink("Create club", "Create", "Club", new { Area = "Clubs" }, null)
+            }
+            else
+            {
+                @Html.ActionLink("Clubs", "List", "Club", new { Area = "Clubs" }, null)
+            }            
+        </li>
         <li>@Html.ActionLink("About", "About", "Home", new { Area = "" }, null)</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home", new { Area = "" }, null)</li>        
+        <li>@Html.ActionLink("Contact", "Contact", "Home", new { Area = "" }, null)</li>
     </ul>
     @Html.Partial("_LoginPartial")
 </div>
