--- a/SportsTech.Web/Views/Dashboard/Index.cshtml
+++ b/SportsTech.Web/Views/Dashboard/Index.cshtml
@@ -3,7 +3,12 @@
 }
 
 <h2>Dashboard</h2>
-<div class="event-list-container">
-    @Html.Action("List", "Event", new { Area = "Events" })
+<div class="col-lg-3">
+
+</div>
+<div class="col-lg-9">
+    <ul>
+        <li>@Html.ActionLink("Teams", "Index", "Team", new { Area = ""})</li>
+    </ul>
 </div>
 
