Includes some unit tests for ClubService First AutoFaq DI of UserManager class Created UserProfile class to contain site header.  Perhaps this should be moved as does it really make sense? Added a Async Helpers so we can run async methods from a sync method

--- a/SportsTech.Web/Areas/Clubs/Views/Shared/_Layout.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            @Html.Action("SiteHeader", "Club", new { Area = "Clubs" })
+            @Html.Action("SiteHeader", "UserProfile", new { Area = "" })
         </div>
     </div>
     <div class="container body-content">
