--- a/SportsTech.Web/Views/Shared/_SiteHeader.cshtml
+++ b/SportsTech.Web/Views/Shared/_SiteHeader.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="navbar-header">
+﻿@model SportsTech.Web.ViewModels.UserProfile.SiteHeaderViewModel
+
+<div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -8,7 +10,20 @@
 </div>
 <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav">
-        <li>@Html.ActionLink("Create club", "Create", "Club", new { Area = "Clubs" }, null)</li>
+        @{
+            if(HttpContext.Current.User.Identity.IsAuthenticated)
+            {             
+                if (Model.Clubs.Count == 1)
+                {
+                    <li>@Html.ActionLink(Model.Clubs.First().Name, "List", "Club", new { Area = "Clubs" }, null)</li>
+                }
+                else
+                {
+                    <li>@Html.ActionLink("Create club", "Create", "Club", new { Area = "Clubs" }, null)</li>        
+                }
+            }
+        }
+        
         <li>@Html.ActionLink("About", "About", "Home", new { Area = "" }, null)</li>
         <li>@Html.ActionLink("Contact", "Contact", "Home", new { Area = "" }, null)</li>        
     </ul>
