--- a/SportsTech.Web/Areas/Clubs/Views/Shared/_Layout.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            @Html.Action("SiteHeader", "UserProfile", new { Area = "" })
+            @Html.Action("SiteHeader", "Page", new { Area = "" })
         </div>
     </div>
     <div class="container body-content">
