Added context menu for clubs plus a new role for Club Managers

--- a/SportsTech.Web/Areas/Clubs/Views/Shared/_Layout.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Shared/_Layout.cshtml
@@ -20,7 +20,12 @@
     <div class="container body-content">
         @RenderSection("dialogs", false)
 
-        @RenderBody()
+        <div class="col-lg-2">
+            @Html.Partial("_ContextMenu")
+        </div>
+        <div class="col-lg-10">
+            @RenderBody()
+        </div>
         <hr />
         <footer>
             @Html.Partial("_SiteFooter")
