- Renamed routes to include ClubId - Started addition of a generic Ierrorhandler for using in validating objects

--- a/SportsTech.Web/Areas/Clubs/Views/Shared/_ContextMenu.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Shared/_ContextMenu.cshtml
@@ -1,14 +1,10 @@
-﻿@{
-    var clubId = ViewContext.RouteData.Values["id"];
-}
-
-<div class="panel panel-primary">
+﻿<div class="panel panel-primary">
     <div class="panel-heading">Club menu</div>
     <ul class="list-group">        
-        <li class="list-group-item">@Html.ActionLink("Teams", "List", "Team",new { clubId = clubId },null)</li>
-        <li class="list-group-item">@Html.ActionLink("Members", "Club", new { clubId = clubId })</li>
-        <li class ="list-group-item">@Html.ActionLink("Memberships", "Club", new { clubId = clubId })</li>
-        <li class="list-group-item">@Html.ActionLink("Players", "Club", new { clubId = clubId })</li>
+        <li class="list-group-item">@Html.ActionLink("Teams", "List", "Team")</li>
+        <li class="list-group-item">@Html.ActionLink("Members", "Club")</li>
+        <li class ="list-group-item">@Html.ActionLink("Memberships", "Club")</li>
+        <li class="list-group-item">@Html.ActionLink("Players", "Club")</li>
 
         @{
             if(User.IsInRole(SportsTech.Data.Role.ClubManager))
