--- a/SportsTech.Web/Views/Shared/_SiteHeader.cshtml
+++ b/SportsTech.Web/Views/Shared/_SiteHeader.cshtml
@@ -16,7 +16,7 @@
                 if (Model.Clubs.Count == 1)
                 {
                     var club = Model.Clubs.First();
-                    <li>@Html.ActionLink(club.Name, "Index", "Club", new { Area = "Clubs", id=club.Id }, null)</li>
+                    <li>@Html.ActionLink(club.Name, "Index", "Club", new { Area = "Clubs", clubid=club.Id }, null)</li>
                 }
                 else
                 {
