Added showing teams registered against a club

--- a/SportsTech.Web/Areas/Clubs/Views/Team/List.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Team/List.cshtml
@@ -3,7 +3,7 @@
     <script>
         var Page = {
             dataTableColumns: [
-                { sName: "Name" },,
+                { sName: "Name" },
                 { sName: "Dashboard", sClass: "action dashboard-row", sWidth: 8, fnRender: renderDashboardIcon, bSortable: false }
             ],
             dataTableLoadUrl: '@Url.Action("DataTable")',
