Added protection against users accessing other clubs data with the ClubAuthorize attribute

--- a/SportsTech.Web/Areas/Clubs/Views/Team/List.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Team/List.cshtml
@@ -43,7 +43,7 @@
 }
 
 @section dialogs {
-    @{  Html.RenderAction("Delete", "Dialog", new { area = "", dialog = new SportsTech.Web.ViewModels.Shared.DeleteDialogViewModel { ControllerName = "Event", Area = "Events" } }); }
+    @{  Html.RenderAction("Delete", "Dialog", new { Area = "", dialog = new SportsTech.Web.ViewModels.Shared.DeleteDialogViewModel { ControllerName = "Team", Area = "Clubs" } }); }
 }
 
 <p>
