--- a/SportsTech.Web/Views/Shared/_SiteHeader.cshtml
+++ b/SportsTech.Web/Views/Shared/_SiteHeader.cshtml
@@ -20,7 +20,7 @@
                 }
                 else
                 {
-                    <li>@Html.ActionLink("Create club", "Create", "Club", new { Area = "Clubs" }, null)</li>        
+                    <li>@Html.ActionLink("Create club", "Create", "Club", new { Area = "Clubs", clubId=0 }, null)</li>        
                 }
             }
         }
