Added competition models, controllers and services

--- a/SportsTech.Web/Areas/Clubs/Views/Shared/_ContextMenu.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Shared/_ContextMenu.cshtml
@@ -2,6 +2,7 @@
     <div class="panel-heading">Club menu</div>
     <ul class="list-group">        
         <li class="list-group-item">@Html.ActionLink("Teams", "List", "Team")</li>
+        <li class="list-group-item">@Html.ActionLink("Competitions", "List", "Competition")</li>
         <li class="list-group-item">@Html.ActionLink("Members", "Club")</li>
         <li class ="list-group-item">@Html.ActionLink("Memberships", "Club")</li>
         <li class="list-group-item">@Html.ActionLink("Players", "Club")</li>
