--- a/SportsTech.Web/Areas/Clubs/Views/Season/List.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Season/List.cshtml
@@ -7,41 +7,17 @@
             dataTableColumns: [
                 { sName: "Name" },
                 { sName: "From" },
-                { sName: "To" },
-                { sName: "Dashboard", sClass: "action dashboard-row", sWidth: 8, fnRender: renderDashboardIcon, bSortable: false }
+                { sName: "To" }
             ],
             dataTableCreateUrl:'@Url.Action("Create")',
             dataTableLoadUrl: '@Url.Action("DataTable", new { competitionId = Model })',
-            dataTableEditUrl: '@Url.Action("List", "Draw")', // TODO:  Swap this naming around.  Edit on icon click, dashboard on row click
+            dataTableEditUrl: '@Url.Action("List", "Draw")',
             dataTableDashboardUrl: '@Url.Action("Edit", "Season")',
             dataTableShowDelete: true
         };
 
-        function renderDashboardIcon(row) {
-            var id = row.aData[0];
-            return '<a href="#" class="dashboard" data-item-id="' + id + '"><i title="Dashboard" class="glyphicon glyphicon-random"></i></a>';
-        }
-
-        // TODO:  Make these generic in page.DataTable
         $(function () {
-            $("#create-event-btn").on("click", function (event) {
-                site.core.redirect(Page.dataTableCreateUrl);
-            });
-
-            $(document).on('click', '#dtable tbody .dashboard-row', function () {
-                var itemId = $(this).children('a').attr("data-item-id");
-                return goToDashboard(itemId);
-            });
-
-            $(document).on('click', '#dtable tbody .dashboard', function () {
-                var itemId = $(this).attr("data-item-id");
-                return goToDashboard(itemId);
-            });
-
-            function goToDashboard(itemId) {
-                site.core.redirect(Page.dataTableDashboardUrl + "/" + itemId);
-                return false;
-            }
+            // Add page functions here
         });
     </script>
 
@@ -53,9 +29,9 @@
 }
 
 <p>
-    <button id="create-event-btn" class="btn btn-primary">Create</button>
+    <button id="create-btn" class="btn btn-primary">Create</button>
 </p>
-<div id="create-event-container" style="display:none;"></div>
+<div id="create-container" style="display:none;"></div>
 <table id="dtable" class="table table-striped table-bordered table-hover responsive">
     <thead>
         <tr>
