--- a/SportsTech.Web/Areas/Clubs/Views/Team/List.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Team/List.cshtml
@@ -3,39 +3,17 @@
     <script>
         var Page = {
             dataTableColumns: [
-                { sName: "Name" },
-                { sName: "Dashboard", sClass: "action dashboard-row", sWidth: 8, fnRender: renderDashboardIcon, bSortable: false }
+                { sName: "Name" }
             ],
+            dataTableCreateUrl: '@Url.Action("Create")',
             dataTableLoadUrl: '@Url.Action("DataTable")',
-            dataTableEditUrl: '@Url.Action("Dashboard", "Team")',
+            dataTableEditUrl: '@Url.Action("Edit", "Team")',
+            dataTableDashboardUrl: '@Url.Action("Dashboard", "Team")',
             dataTableShowDelete: true
         };
 
-        function renderDashboardIcon(row) {
-            var id = row.aData[0];
-            return '<a href="#" class="dashboard" data-item-id="' + id + '"><i title="Dashboard" class="glyphicon glyphicon-random"></i></a>';
-        }
-
         $(function () {
-            $("#create-event-btn").on("click", function (event) {
-                site.core.redirect('@Url.Action("Create")');
-            });
-
-            $(document).on('click', '#dtable tbody .dashboard-row', function () {
-                var itemId = $(this).children('a').attr("data-item-id");
-                return goToDashboard(itemId);
-            });
-
-            $(document).on('click', '#dtable tbody .dashboard', function () {
-                var itemId = $(this).attr("data-item-id");
-                return goToDashboard(itemId);
-            });
-
-            function goToDashboard(itemId) {
-                var url = '@Url.Action("Edit", "Team", new { area = "Clubs" })';
-                site.core.redirect(url + "/" + itemId);
-                return false;
-            }
+            // Add page functions here
         });
     </script>
 
@@ -47,9 +25,9 @@
 }
 
 <p>
-    <button id="create-event-btn" class="btn btn-primary">Create</button>
+    <button id="create-btn" class="btn btn-primary">Create</button>
 </p>
-<div id="create-event-container" style="display:none;"></div>
+<div id="create-container" style="display:none;"></div>
 <table id="dtable" class="table table-striped table-bordered table-hover responsive">
     <thead>
         <tr>
