--- a/SportsTech.Web/Areas/Events/Views/Event/Edit.cshtml
+++ b/SportsTech.Web/Areas/Events/Views/Event/Edit.cshtml
@@ -14,7 +14,7 @@
         @Html.Partial("_EventForm", Model)
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-xs-offset-2 col-xs-10">
                 <input id="cancel-edit-btn" type="submit" value="Save changes" class="btn btn-primary" />
                 <input id="cancel-event-btn" type="button" value="Cancel" class="btn btn-default btn-cancel" />
             </div>
