--- a/SportsTech.Web/Areas/Clubs/Views/Season/Create.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Season/Create.cshtml
@@ -10,11 +10,12 @@
 
     <div class="form-horizontal">
         @Html.ValidationSummary(true)
-
+        
         @Html.Partial("_SeasonForm", Model)
         
+        @Html.HiddenFor(v => v.ReturnUrl)
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-xs-offset-2 col-xs-10">
                 <input id="cancel-create-btn" type="submit" value="Create" class="btn btn-primary" />
                 <input id="cancel-event-btn" type="button" value="Cancel" class="btn btn-default btn-cancel" />
             </div>
@@ -27,13 +28,7 @@
     <script>
         $(function() {
             $('#cancel-event-btn').on('click', function () {
-                site.core.redirect('@Url.Action("List")');
-            });
-
-            $('.input-group.date').datepicker({
-                autoClose: true,
-                todayBtn: true,
-                orientation: "auto left"
+                site.core.redirect('@Model.ReturnUrl');
             });
         });       
     </script>
