--- a/SportsTech.Web/Areas/Clubs/Views/Team/Create.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Team/Create.cshtml
@@ -14,7 +14,7 @@
         @Html.Partial("_TeamForm", Model)
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-xs-offset-2 col-xs-10">
                 <input id="cancel-create-btn" type="submit" value="Create" class="btn btn-primary" />
                 <input id="cancel-event-btn" type="button" value="Cancel" class="btn btn-default btn-cancel" />
             </div>
