--- a/SportsTech.Web/Areas/Events/Views/Event/_EventForm.cshtml
+++ b/SportsTech.Web/Areas/Events/Views/Event/_EventForm.cshtml
@@ -1,16 +1,16 @@
 ﻿@model SportsTech.Web.Areas.Events.ViewModels.Event.CreateViewModel
 
 <div class="form-group">
-    @Html.LabelFor(model => model.Against, new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
+    @Html.LabelFor(model => model.Against, new { @class = "control-label col-xs-2" })
+    <div class="col-xs-10">
         @Html.TextBoxFor(model => model.Against, new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.Against)
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(model => model.IsHomeGame, new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
+    @Html.LabelFor(model => model.IsHomeGame, new { @class = "control-label col-xs-2" })
+    <div class="col-xs-10">
         <div class="checkbox">
             <label>
                 @Html.CheckBoxFor(model => model.IsHomeGame)
@@ -21,16 +21,16 @@
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(model => model.Referee, new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
+    @Html.LabelFor(model => model.Referee, new { @class = "control-label col-xs-2" })
+    <div class="col-xs-10">
         @Html.TextBoxFor(model => model.Referee, new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.Referee)
     </div>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(model => model.EventDate, new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
+    @Html.LabelFor(model => model.EventDate, new { @class = "control-label col-xs-2" })
+    <div class="col-xs-10">
         @Html.TextBoxFor(model => model.EventDate, new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.EventDate)
     </div>
