--- a/SportsTech.Web/Views/Account/Register.cshtml
+++ b/SportsTech.Web/Views/Account/Register.cshtml
@@ -12,43 +12,43 @@
     <hr />
     @Html.ValidationSummary()
     <div class="form-group">
-        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.UserName, new { @class = "col-xs-2 control-label" })
+        <div class="col-xs-10">
             @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.Password, new { @class = "col-xs-2 control-label" })
+        <div class="col-xs-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-xs-2 control-label" })
+        <div class="col-xs-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.FirstName, new { @class = "col-xs-2 control-label" })
+        <div class="col-xs-10">
             @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.LastName, new { @class = "col-xs-2 control-label" })
+        <div class="col-xs-10">
             @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.EmailAddress, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.EmailAddress, new { @class = "col-xs-2 control-label" })
+        <div class="col-xs-10">
             @Html.TextBoxFor(m => m.EmailAddress, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-xs-offset-2 col-xs-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
