--- a/SportsTech.Web/Views/Account/_ChangePasswordPartial.cshtml
+++ b/SportsTech.Web/Views/Account/_ChangePasswordPartial.cshtml
@@ -10,26 +10,26 @@
     <hr />
     @Html.ValidationSummary()
     <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.OldPassword, new { @class = "col-xs-2 control-label" })
+        <div class="col-xs-10">
             @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.NewPassword, new { @class = "col-xs-2 control-label" })
+        <div class="col-xs-10">
             @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-xs-2 control-label" })
+        <div class="col-xs-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
 
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-xs-offset-2 col-xs-10">
             <input type="submit" value="Change password" class="btn btn-default" />
         </div>
     </div>
