A whole bunch of changes, essentially at the end of it the CompetitionRegistration delete

--- a/SportsTech.Web/Areas/Clubs/Views/Team/List.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Team/List.cshtml
@@ -8,7 +8,7 @@
             dataTableCreateUrl: '@Url.Action("Create")',
             dataTableLoadUrl: '@Url.Action("DataTable")',
             dataTableEditUrl: '@Url.Action("Edit", "Team")',
-            dataTableDashboardUrl: '@Url.Action("Dashboard", "Team")',
+            dataTableDashboardUrl: '@Url.Action("List", "TeamCompetition")',
             dataTableShowDelete: true
         };
 
