--- a/SportsTech.Web/Areas/Clubs/Views/Draw/Edit.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Draw/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SportsTech.Web.Areas.Events.ViewModels.Event.CreateViewModel
+﻿@model SportsTech.Web.Areas.Clubs.ViewModels.Draw.CreateViewModel
 
 @{
     ViewBag.Title = "Edit event";
