Removed Events area and merged final work into Clubs area

--- a/SportsTech.Web/Areas/Clubs/Views/Activity/_ActivityEvents.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Activity/_ActivityEvents.cshtml
@@ -1,4 +1,4 @@
-﻿@model SportsTech.Web.Areas.Events.ViewModels.Activity.ActivityEventViewModel
+﻿@model SportsTech.Web.Areas.Clubs.ViewModels.Activity.ActivityEventViewModel
 
 <button class="btn btn-danger col-lg-12">    
     @Model.Name    
