--- a/SportsTech.Web/Areas/Clubs/Views/Activity/_Available.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Activity/_Available.cshtml
@@ -1,4 +1,4 @@
-﻿@model SportsTech.Web.Areas.Events.ViewModels.Activity.AvailableViewModel
+﻿@model SportsTech.Web.Areas.Clubs.ViewModels.Activity.AvailableViewModel
 
 <div class="center-block text-center">
     @foreach (var available in Model.Events)
