--- a/SportsTech.Web/Areas/Clubs/Views/Activity/_List.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Activity/_List.cshtml
@@ -1,4 +1,4 @@
-﻿@model SportsTech.Web.Areas.Events.ViewModels.Activity.ListViewModel
+﻿@model SportsTech.Web.Areas.Clubs.ViewModels.Activity.ListViewModel
 
 @foreach (var activity in Model.ActivityHistory)
 {
