--- a/SportsTech.Web/Areas/Clubs/Views/Draw/Dashboard.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Draw/Dashboard.cshtml
@@ -1,7 +1,8 @@
-﻿@model SportsTech.Web.Areas.Events.ViewModels.Dashboard.DashboardViewModel
+﻿@model SportsTech.Web.Areas.Clubs.ViewModels.Draw.DashboardViewModel
 
 @{
     ViewBag.Title = "Event Dashboard";
+    Layout = "~/Views/Shared/_Layout.cshtml";        
 }
 
 <div class="row">
