--- a/SportsTech.Web/Areas/Clubs/Views/Draw/List.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Draw/List.cshtml
@@ -13,7 +13,7 @@
             dataTableCreateUrl: '@Url.Action("Create", new { seasonId = Model })',
             dataTableLoadUrl: '@Url.Action("DataTable", new { seasonId = Model })',
             dataTableEditUrl: '@Url.Action("Edit", "Draw")',
-            dataTableDashboardUrl: '@Url.Action("List", "Draw")',
+            dataTableDashboardUrl: '@Url.Action("Dashboard", "Draw")',
             dataTableShowDelete: true                
         };
 
