--- a/SportsTech.Web/Areas/Clubs/Views/Draw/Team.cshtml
+++ b/SportsTech.Web/Areas/Clubs/Views/Draw/Team.cshtml
@@ -1,4 +1,4 @@
-﻿@model SportsTech.Web.Areas.Events.ViewModels.Dashboard.TeamViewModel
+﻿@model SportsTech.Web.Areas.Clubs.ViewModels.Draw.TeamViewModel
 
 <div class="center-block text-center">
     @Model.Name
